<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".detail.DetailActivity">

        <ImageView
            android:id="@+id/ivDetailPokemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/poke_ball"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tvDetailName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_light_box"
            android:gravity="center"
            tools:text="TextView"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/ic_black_box"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivDetailPokemon"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/ic_black_box"
            android:gravity="center"
            android:text="@string/moves"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/ivDetailPokemon"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/tvDetailMoves1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/ic_light_box"
            android:gravity="center"
            tools:text="TextView"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/tvDetailMoves2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/ic_black_box"
            android:gravity="center"
            tools:text="TextView"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvDetailMoves1"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailMoves1" />

        <TextView
            android:id="@+id/tvDetailMoves3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/ic_light_box"
            android:gravity="center"
            tools:text="TextView"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvDetailMoves2"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailMoves2" />

        <TextView
            android:id="@+id/tvDetailMoves4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/ic_black_box"
            android:gravity="center"

            tools:text="TextView"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvDetailMoves3"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailMoves3" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/ic_black_box"
            android:gravity="center"
            android:text="@string/hp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDetailPokemon" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_black_box"
            android:gravity="center"
            android:text="@string/attack"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_black_box"
            android:gravity="center"
            android:text="@string/deffend"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_black_box"
            android:gravity="center"
            android:text="@string/speed"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/tvDetailHp"
            android:layout_width="56dp"
            android:layout_height="32dp"
            android:background="@drawable/ic_light_box"
            android:gravity="center"
            tools:text="1000"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/tvDetailAttack"
            android:layout_width="56dp"
            android:layout_height="32dp"
            android:background="@drawable/ic_light_box"
            android:gravity="center"
            tools:text="1000"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailHp" />

        <TextView
            android:id="@+id/tvDetailDef"
            android:layout_width="56dp"
            android:layout_height="32dp"
            android:background="@drawable/ic_light_box"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailAttack"
            tools:text="1000" />

        <TextView
            android:id="@+id/tvDetailSpd"
            android:layout_width="56dp"
            android:layout_height="32dp"
            android:background="@drawable/ic_light_box"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/tvSpecialDef"
            tools:text="1000" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabPokeball"
            android:layout_width="53dp"
            android:layout_height="63dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="64dp"
            android:clickable="true"
            app:backgroundTint="#EDE5E5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailName"
            app:srcCompat="@drawable/wild_pokeball"
            android:focusable="true"
            android:contentDescription="@string/app_name" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabDelete"
            android:layout_width="53dp"
            android:layout_height="63dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="64dp"
            android:clickable="true"
            app:backgroundTint="#EDE5E5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailName"
            app:srcCompat="@drawable/pet_pokeball"
            android:focusable="true"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tvStateBall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/catch_pokemon"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/fabPokeball"
            app:layout_constraintStart_toStartOf="@+id/fabPokeball"
            app:layout_constraintTop_toBottomOf="@+id/fabPokeball" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_black_box"
            android:text="@string/special_attack"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/tvSpecialAtk"
            android:layout_width="56dp"
            android:layout_height="32dp"
            android:background="@drawable/ic_light_box"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailDef"
            tools:text="1000" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_black_box"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/special_defend"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/tvSpecialDef"
            android:layout_width="56dp"
            android:layout_height="32dp"
            android:background="@drawable/ic_light_box"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/tvSpecialAtk"
            tools:text="1000" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>